--- a/css/styles.css
+++ b/css/styles.css
@@ -122,13 +122,25 @@ body {
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  background: #2f303a;
   text-align: center;
 }
 
+.overlay {
+  height: 600px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #c4c4c4;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/bgh.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .hero-titel {
-  margin: 0 auto 40px auto;
-  max-width: 696px;
+  margin: 0 auto 30px auto;
+  max-width: 700px;
 
   color: var(--titel-text-color);
   font-weight: 900;
@@ -141,7 +153,7 @@ body {
 
 .button {
   display: inline-block;
-  border: 1px solid transparent;
+  border: transparent;
   padding: 10px 32px;
   border-radius: 4px;
   background-color: var(--accent-color);
