--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {
 
 /* Хедер */
 .header-line {
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 /* Логотип */
@@ -92,32 +92,28 @@ body {
 
 /* Контакты */
 .contacts {
-  display: block;
-  align-items: start;
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
-  color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  color: var(--secondary-text-color);
+  fill: var(--secondary-text-color);
 }
 
-/* .icon-smartphone {
-  width: 10px;
-  height: 16px;
-} */
+.svg-icon {
+  margin-right: 10px;
+}
 
 .contacts-list {
   display: flex;
   margin-left: auto;
 }
-
-/* .contacts-list .item {
-  display: block;
-} */
 
 .contacts-list .item:not(:last-child) {
   margin-right: 50px;
@@ -350,7 +346,8 @@ body {
   fill: #afb1b8;
 }
 
-.social-link:hover {
+.social-link:hover,
+:focus {
   border-radius: 50%;
   background-color: var(--accent-color);
   fill: var(--titel-text-color);
@@ -377,6 +374,7 @@ body {
 
 .regular-list .item {
   display: flex;
+  align-items: center;
   justify-content: center;
   margin-right: 30px;
   padding: 0;
@@ -394,7 +392,7 @@ body {
 }
 
 .regular-link {
-  display: block;
+  display: flex;
   border-radius: 4px;
   fill: #afb1b8;
 }
@@ -408,8 +406,6 @@ body {
   align-items: center;
   justify-content: center;
   margin: 15px 32px;
-  width: 106px;
-  height: 60px;
 }
 
 /* Футер */
@@ -483,7 +479,6 @@ body {
 .join-container {
   display: block;
   padding-top: 12px;
-  /* margin-top: 72px; */
 }
 
 .join-container .text {
@@ -602,6 +597,12 @@ body {
 }
 
 /* Примеры работ */
+.works:hover,
+:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .works .link {
   color: var(--primary-text-color);
   text-decoration: none;
