--- a/css/styles.css
+++ b/css/styles.css
@@ -130,9 +130,6 @@ body {
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
-}
-
-.overlay {
   height: 600px;
   max-width: 1600px;
   margin-left: auto;
@@ -227,13 +224,12 @@ body {
 }
 
 .icons-container {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
   margin-bottom: 30px;
   background-color: #f5f4fa;
-}
-
-.icon-img {
-  margin: 25px 100px;
 }
 
 /* Заголовок секций "Чем мы занимаемся" и "Наша команда"*/
@@ -319,7 +315,8 @@ body {
 
 .social-link-list {
   display: flex;
-  margin: 16px 32px 0 32px;
+  justify-content: center;
+  margin-top: 16px;
   padding: 0;
   align-items: center;
 }
@@ -339,7 +336,9 @@ body {
 }
 
 .social-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 44px;
   min-width: 44px;
   border-radius: 50%;
@@ -350,12 +349,6 @@ body {
 :focus {
   background-color: var(--accent-color);
   fill: var(--titel-text-color);
-}
-
-.social-link .svg-contain {
-  margin: 12px auto;
-  width: 20px;
-  height: 20px;
 }
 
 /* Постоянные клиенты */
@@ -378,6 +371,7 @@ body {
   margin-right: 30px;
   padding: 0;
   width: 170px;
+  height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
 }
@@ -392,19 +386,16 @@ body {
 
 .regular-link {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 92px;
   border-radius: 4px;
   fill: #afb1b8;
 }
 
 .regular-link:hover {
   fill: var(--accent-color);
-}
-
-.regular-link .svg-contain {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 15px 32px;
 }
 
 /* Футер */
@@ -415,11 +406,9 @@ body {
   background-color: #2f303a;
 }
 
-.test {
-  display: flex;
-}
-
 .footer-container {
+  display: flex;
+  align-content: baseline;
   margin: 0 auto;
   width: 1200px;
   padding-left: 15px;
@@ -475,13 +464,8 @@ body {
   margin-bottom: 0;
 }
 
-.join-container {
-  display: block;
-  padding-top: 12px;
-}
-
-.join-container .text {
-  margin: 0 0 20px 0;
+.join-text {
+  margin: 12px 0 20px 0;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -596,15 +580,22 @@ body {
 }
 
 /* Примеры работ */
-.works:hover,
+/* .works:hover,
 :focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+} */
 
-.works .link {
+.project-link {
+  display: block;
   color: var(--primary-text-color);
   text-decoration: none;
+}
+
+.project-link:hover,
+.project-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .works .titel {
